zuul api gateway and looad balanced configured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name=zuul
+server.port=8011
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+
+zuul.ribbon.eager-load.enabled= true
+
+zuul.host.socket-timeout-millis=60000
+
+
+
+
 
